sass/style.sass
$font-nav: #aaa
$font-link: orange
$font-main: gray
$font-white: #fff
$dark: #333

=flex()
	display: flex
	display: -webkit-box
	display: -ms-flexbox
	display: -webkit-flex

img
	height: auto
	width: 100%
	object-fit: cover

*
	outline: 1px solid red

body 
	font-family: 'Times New Roman', serif
	color: $font-main
	font-size: 16px
	margin: 0

.container
	max-width: 1200px
	box-sizing: border-box
	margin: 0 auto
	padding-left: 10px
	padding-right: 10px

.flex
	+flex
	flex-wrap: wrap
	justify-content: space-between

.my-background
	background: $dark

.link a
	text-decoration: none
	color: inherit

.link a:hover,
	color: $font-nav

.navbar
	@extend .my-background
	@extend .link
	@extend .top-padding
	@extend .bottom-padding
	color: $font-nav
	.container
		align-items: center
		a:hover
			color: $font-white
			
.menu
	list-style-type: none
	+flex
	padding: 0
	li
		margin: 0
		padding: 20px 0
		background-color: #111
		a
			text-transform: uppercase
			align-items: center
			padding: 20px 20px

.logo
	display: block
	margin-right: 20px
	span
		font-size: 3rem
	p
		margin: 0
		margin-bottom: 0
		font-size: 1rem
		font-weight: bold
		sub
			font-size: 1rem

.text-orange
	color: $font-link

.gallery
	@extend .flex
	justify-content: space-between
	.tile
		width: 370px
		@extend .bottom-padding
		&:last-child
			margin-right: 0

.photo
	display: block
	border: 1px solid $font-nav
	padding: 5px
	box-sizing: border-box

.go-to
	+flex
	justify-content: flex-end
	font-weight: bold
	p
		margin: 0
		margin-right: 5px
	i
		padding: 2px 0
		font-size: 0.9rem

.link:hover,
.link:visited,
.link:active,
.link:focus
	text-decoration: none

.top-padding
	padding-top: 20px

.bottom-padding
	padding-bottom: 20px

.top-margin
	margin-top: 20px

.padding-null
	padding: 0

.story
	@extend .flex
	justify-content: space-between
	box-sizing: border-box
	h1
		margin-top: 0
	.text
		padding-right: 30px
		padding-bottom: 20px
		box-sizing: border-box
		width: 550px
	.photo
		width: 550px
		box-sizing: border-box

.text-white
	color: $font-white

.text-strong
	@extend .link
	font-style: italic

.flex-center
	@extend .flex
	justify-content: center

.my-list
	width: 250px
	padding-right: 20px
	&:last-child
		padding-right: 5px
	h4
		margin-bottom: 15px
	ul
		list-style-type: none
		@extend .padding-null
		li
			border-bottom: 1px solid $font-main
			padding: 5px 0

footer
	background: #111
	div
		justify-content: space-between
		p
			text-align: center

@media (max-width: 1200px)
	.gallery,
	.story,
		justify-content: center

@media (max-width: 991px)
	.text-center
		text-align: center
	.logo
		margin-right: 5%
	
	.navbar 
		padding-top: 0
		padding-bottom: 0
		
	.navbar .flex
		justify-content: center
		a:focus
			color: $font-white

	.gallery
		a:focus
			border: 1px solid orange

@media (max-width: 767px)
	.menu
		flex-direction: column
		justify-content: center
		align-items: center		
	.my-list
		text-align: center
	footer
		.flex
			justify-content: center
		p
			margin-top: 5px
			margin-bottom: 5px

